@@ -36,6 +36,10 @@ void _gosInit(void)
 	_gosThreadsInit();
 }
 
+void _gosPostInit(void)
+{
+}
+
 void _gosDeinit(void)
 {
 	/* ToDo */
